$Id$

****************************** DRUPAL 6 - 2.x BRANCH ********************************

October 25, 2009
-----------------
#492794 by Michelle: Rewrote code that determines what AF applies a style to.
#586652 by Michelle: Removed modification to $submitted.

October 21, 2009
-----------------
#568422 by Michelle: Removed 'My topics' view and made 'My posts' much better.
#568422 by Michelle: Made 'My posts' view use forum topic list style

September 6, 2009
-----------------
#561448 by Michelle: Fixed problem with active forum topics topic titles not linking.
#542998 by Michelle: Moved user picture handling to Author Pane.

September 3, 2009
-----------------
#561448 by Michelle: Cleaned up all the views except user topics/posts and the searches.

August 28, 2009
---------------
#510772 by Michelle: Added form alter so AF's OG topics view can be used as a group's RON.
#561448 by Michelle: Made unanswered topics view make more sense.

August 27, 2009
---------------
#545590 by Michelle: Removed dependency in CSS on markup being within a #forum div.

August 24, 2009
---------------
#538344 by merlinofchaos: Added view of a user's topics.
#537822 by Michelle, stephthegeek: Added forum-topic-title class to title in topic listing. Also fixed spacing on items in topic listing.

August 22, 2009
---------------
#551548 by Michelle, crea: Added check to make sure links array isn't empty before iterating through it.
#537018 by bas.hr: Removed typo extra . in class name.

August 10, 2009
---------------
NOISSUE by merlinofchaos: Add a sort widget for the forum topic list that utilizes the tablesort headers.
NOISSUE by merlinofchaos: Add a time period plus role exclusion to the most active poster pane.
 
August 3, 2009
--------------
NOISSUE by merlinofchaos: Add a "most active poster" block and a view of "My forum posts" to easily follow what a person has posted.

August 2, 2009
--------------
NOISSUE by Michelle: Fixed notices.