@@ -2,6 +2,10 @@ $Id$
 
 ****************************** DRUPAL 6 - 2.x BRANCH ********************************
 
+November 9, 2009
+-----------------
+#627808 by Michelle: Account for insconsistancy in nodecomment's handling of the comment anchor link.
+
 October 25, 2009
 -----------------
 #492794 by Michelle: Rewrote code that determines what AF applies a style to.
